fix broken roll

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -660,37 +660,39 @@
     "    return merged\n",
     "\n",
     "def build_dataloaders(dataframe):\n",
-    "    data = torch.from_numpy(np.vstack(dataframe['data'].to_numpy())).reshape(-1, 1, 36, 36)\n",
-    "    labels = torch.from_numpy(np.vstack(dataframe['labels'].to_numpy())).reshape(-1, 1, 36, 36)\n",
+    "  data = torch.from_numpy(np.vstack(dataframe['data'].to_numpy())).reshape(-1, 1, 36, 36)\n",
+    "  data = torch.nan_to_num(data)\n",
+    "  labels = torch.from_numpy(np.vstack(dataframe['labels'].to_numpy())).reshape(-1, 1, 36, 36)\n",
     "\n",
-    "    p = np.random.permutation(len(data))\n",
-    "    data, labels = data[p], labels[p]\n",
+    "  p = np.random.permutation(len(data))\n",
+    "  data, labels = data[p], labels[p]\n",
     "\n",
-    "    offset = int(len(data) * .8)\n",
-    "    X_train, X_valid = data[:offset], data[offset:]\n",
-    "    Y_train, Y_valid = labels[:offset].float(), labels[offset:].float()\n",
+    "  offset = int(len(data) * .8)\n",
+    "  X_train, X_valid = data[:offset], data[offset:]\n",
+    "  Y_train, Y_valid = labels[:offset].float(), labels[offset:].float()\n",
     "\n",
-    "    # scaler = RobustScaler()\n",
-    "    # scaler.fit(X_train)\n",
-    "    # X_train = torch.tensor(scaler.transform(X_train)).float()\n",
-    "    # X_valid = torch.tensor(scaler.transform(X_valid)).float()\n",
-    "    \n",
-    "    flipper = v2.RandomVerticalFlip(1)\n",
-    "    X_train_flipped, Y_train_flipped = flipper(X_train), flipper(Y_train)\n",
+    "  # scaler = RobustScaler()\n",
+    "  # scaler.fit(X_train)\n",
+    "  # X_train = torch.tensor(scaler.transform(X_train)).float()\n",
+    "  # X_valid = torch.tensor(scaler.transform(X_valid)).float()\n",
+    "  \n",
+    "  rolled_x, rolled_y = [], []\n",
+    "  for i in range(36, 2):\n",
+    "      rolled_x.append(torch.roll(X_train, i, dims=3))\n",
+    "      rolled_y.append(torch.roll(Y_train, i, dims=3))\n",
     "\n",
-    "    rolled_x, rolled_y = [], []\n",
-    "    for i in range(36):\n",
-    "        rolled_x.append(torch.roll(X_train, i, dims=3))\n",
-    "        rolled_y.append(torch.roll(Y_train, i, dims=3))\n",
+    "  X_train, Y_train = torch.vstack((X_train, *rolled_x)), torch.vstack((Y_train, *rolled_y))\n",
     "\n",
-    "    X_train, Y_train = torch.vstack((X_train, X_train_flipped, *rolled_x)), torch.vstack((Y_train, Y_train_flipped, *rolled_y))\n",
-    "    train_dataset = WellsDataset(X_train, Y_train, None)\n",
-    "    valid_dataset = WellsDataset(X_valid, Y_valid, None)\n",
+    "  flipper = v2.RandomVerticalFlip(1)\n",
+    "  X_train, Y_train = torch.vstack((X_train, flipper(X_train))), torch.vstack((Y_train, flipper(Y_train)))\n",
+    "  \n",
+    "  train_dataset = WellsDataset(X_train, Y_train, None)\n",
+    "  valid_dataset = WellsDataset(X_valid, Y_valid, None)\n",
     "\n",
-    "    train_dataloader = DataLoader(train_dataset, batch_size=128)\n",
-    "    valid_dataloader = DataLoader(valid_dataset, batch_size=128)\n",
+    "  train_dataloader = DataLoader(train_dataset, batch_size=128)\n",
+    "  valid_dataloader = DataLoader(valid_dataset, batch_size=128)\n",
     "\n",
-    "    return train_dataloader, valid_dataloader\n"
+    "  return train_dataloader, valid_dataloader\n"
    ]
   },
   {
@@ -829,6 +831,75 @@
    "source": [
     "train_dl, valid_dl = build_dataloaders(build_dataframe())\n",
     "train(train_dl, valid_dl, 30, 0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([9435, 1, 36, 36])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(rolled_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, Y_train = torch.vstack((X_train, *rolled_x)), torch.vstack((Y_train, *rolled_y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([143412, 1, 36, 36])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
    ]
   }
  ],
