--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -825,101 +825,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dl, valid_dl = build_dataloaders(build_dataframe())\n",
-    "train(train_dl, valid_dl, 30, 0.001)"
+    "class UNet(nn.Module):\n",
+    "    def __init__(self, n_channels, n_classes, bilinear=False):\n",
+    "        super(UNet, self).__init__()\n",
+    "        self.n_channels = n_channels\n",
+    "        self.n_classes = n_classes\n",
+    "        self.bilinear = bilinear\n",
+    "\n",
+    "        self.inc = (DoubleConv(n_channels, 64))\n",
+    "        self.down1 = (Down(64, 128))\n",
+    "        self.down2 = (Down(128, 256))\n",
+    "        # self.down3 = (Down(256, 512))\n",
+    "        factor = 2 if bilinear else 1\n",
+    "        # self.down4 = (Down(512, 1024 // factor))\n",
+    "        # self.up1 = (Up(1024, 512 // factor, bilinear))\n",
+    "        # self.up2 = (Up(512, 256 // factor, bilinear))\n",
+    "        self.up3 = (Up(256, 128 // factor, bilinear))\n",
+    "        self.up4 = (Up(128, 64, bilinear))\n",
+    "        self.outc = (OutConv(64, n_classes))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x1 = self.inc(x)\n",
+    "        x2 = self.down1(x1)\n",
+    "        x3 = self.down2(x2)\n",
+    "        # x4 = self.down3(x3)\n",
+    "        # x5 = self.down4(x4)\n",
+    "        # x = self.up1(x5, x4)\n",
+    "        # x = self.up2(x, x3)\n",
+    "        x = self.up3(x3, x2)\n",
+    "        x = self.up4(x, x1)\n",
+    "        logits = self.outc(x)\n",
+    "        return logits\n",
+    "\n",
+    "    # def use_checkpointing(self):\n",
+    "    #     self.inc = torch.utils.checkpoint(self.inc)\n",
+    "    #     self.down1 = torch.utils.checkpoint(self.down1)\n",
+    "    #     self.down2 = torch.utils.checkpoint(self.down2)\n",
+    "    #     self.down3 = torch.utils.checkpoint(self.down3)\n",
+    "    #     self.down4 = torch.utils.checkpoint(self.down4)\n",
+    "    #     self.up1 = torch.utils.checkpoint(self.up1)\n",
+    "    #     self.up2 = torch.utils.checkpoint(self.up2)\n",
+    "    #     self.up3 = torch.utils.checkpoint(self.up3)\n",
+    "    #     self.up4 = torch.utils.checkpoint(self.up4)\n",
+    "    #     self.outc = torch.utils.checkpoint(self.outc)\n",
+    "\n",
+    "class DoubleConv(nn.Module):\n",
+    "    \"\"\"(convolution => [BN] => ReLU) * 2\"\"\"\n",
+    "\n",
+    "    def __init__(self, in_channels, out_channels, mid_channels=None):\n",
+    "        super().__init__()\n",
+    "        if not mid_channels:\n",
+    "            mid_channels = out_channels\n",
+    "        self.double_conv = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels, mid_channels, kernel_size=3, padding=1, bias=False),\n",
+    "            nn.BatchNorm2d(mid_channels),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Conv2d(mid_channels, out_channels, kernel_size=3, padding=1, bias=False),\n",
+    "            nn.BatchNorm2d(out_channels),\n",
+    "            nn.ReLU(inplace=True)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.double_conv(x)\n",
+    "\n",
+    "\n",
+    "class Down(nn.Module):\n",
+    "    \"\"\"Downscaling with maxpool then double conv\"\"\"\n",
+    "\n",
+    "    def __init__(self, in_channels, out_channels):\n",
+    "        super().__init__()\n",
+    "        self.maxpool_conv = nn.Sequential(\n",
+    "            nn.MaxPool2d(2),\n",
+    "            DoubleConv(in_channels, out_channels)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.maxpool_conv(x)\n",
+    "\n",
+    "\n",
+    "class Up(nn.Module):\n",
+    "    \"\"\"Upscaling then double conv\"\"\"\n",
+    "\n",
+    "    def __init__(self, in_channels, out_channels, bilinear=True):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        # if bilinear, use the normal convolutions to reduce the number of channels\n",
+    "        if bilinear:\n",
+    "            self.up = nn.Upsample(scale_factor=2, mode='bilinear', align_corners=True)\n",
+    "            self.conv = DoubleConv(in_channels, out_channels, in_channels // 2)\n",
+    "        else:\n",
+    "            self.up = nn.ConvTranspose2d(in_channels, in_channels // 2, kernel_size=2, stride=2)\n",
+    "            self.conv = DoubleConv(in_channels, out_channels)\n",
+    "\n",
+    "    def forward(self, x1, x2):\n",
+    "        x1 = self.up(x1)\n",
+    "        # input is CHW\n",
+    "        diffY = x2.size()[2] - x1.size()[2]\n",
+    "        diffX = x2.size()[3] - x1.size()[3]\n",
+    "\n",
+    "        x1 = F.pad(x1, [diffX // 2, diffX - diffX // 2,\n",
+    "                        diffY // 2, diffY - diffY // 2])\n",
+    "        # if you have padding issues, see\n",
+    "        # https://github.com/HaiyongJiang/U-Net-Pytorch-Unstructured-Buggy/commit/0e854509c2cea854e247a9c615f175f76fbb2e3a\n",
+    "        # https://github.com/xiaopeng-liao/Pytorch-UNet/commit/8ebac70e633bac59fc22bb5195e513d5832fb3bd\n",
+    "        x = torch.cat([x2, x1], dim=1)\n",
+    "        return self.conv(x)\n",
+    "\n",
+    "\n",
+    "class OutConv(nn.Module):\n",
+    "    def __init__(self, in_channels, out_channels):\n",
+    "        super(OutConv, self).__init__()\n",
+    "        self.conv = nn.Conv2d(in_channels, out_channels, kernel_size=1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.conv(x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([9435, 1, 36, 36])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(rolled_x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, Y_train = torch.vstack((X_train, *rolled_x)), torch.vstack((Y_train, *rolled_y))"
+    "model = UNet(n_channels=1, n_classes=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input = torch.rand((1, 1,36,36))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = model(input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([143412, 1, 36, 36])"
+       "tensor([[[[ 0.2848,  0.1406,  0.0050,  ...,  0.1765,  0.6826, -0.0710],\n",
+       "          [-0.1207,  0.5279,  0.6579,  ...,  0.5957,  0.0230, -0.1053],\n",
+       "          [ 0.3495, -0.1264,  0.1747,  ..., -0.2818, -0.3580,  0.0666],\n",
+       "          ...,\n",
+       "          [ 0.0289,  0.1855,  0.0210,  ..., -0.6026,  0.2073, -0.6206],\n",
+       "          [-0.2063,  0.4328, -0.3127,  ..., -0.0213,  0.1423, -0.4487],\n",
+       "          [-0.0311, -0.0904,  0.1301,  ...,  0.1081,  0.2348,  0.0307]],\n",
+       "\n",
+       "         [[ 0.1281,  0.1529,  0.5292,  ...,  0.2519,  0.2350,  0.1265],\n",
+       "          [-0.0148,  0.2971,  0.1635,  ..., -0.1518, -0.3768,  0.1412],\n",
+       "          [-0.0972,  0.3895, -0.0085,  ...,  0.2106, -0.1402,  0.2013],\n",
+       "          ...,\n",
+       "          [-0.1952,  0.1003,  0.4971,  ...,  0.1800,  0.1716, -0.1752],\n",
+       "          [-0.0194,  0.2476,  0.0372,  ...,  0.4616,  0.7776,  0.1702],\n",
+       "          [ 0.3126,  0.3965,  0.4860,  ...,  0.1537,  0.2657,  0.2198]]]],\n",
+       "       grad_fn=<ConvolutionBackward0>)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train.shape"
+    "output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "165888.0"
+       "tensor([[[0, 1, 1,  ..., 1, 0, 1],\n",
+       "         [1, 0, 0,  ..., 0, 0, 1],\n",
+       "         [0, 1, 0,  ..., 1, 1, 1],\n",
+       "         ...,\n",
+       "         [0, 0, 1,  ..., 1, 0, 1],\n",
+       "         [1, 0, 1,  ..., 1, 1, 1],\n",
+       "         [1, 1, 1,  ..., 1, 1, 1]]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "331776/2"
+    "torch.argmax(F.softmax(output, dim=1), dim=1)"
    ]
   }
  ],
