--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -974,63 +974,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[[ 0.2848,  0.1406,  0.0050,  ...,  0.1765,  0.6826, -0.0710],\n",
-       "          [-0.1207,  0.5279,  0.6579,  ...,  0.5957,  0.0230, -0.1053],\n",
-       "          [ 0.3495, -0.1264,  0.1747,  ..., -0.2818, -0.3580,  0.0666],\n",
-       "          ...,\n",
-       "          [ 0.0289,  0.1855,  0.0210,  ..., -0.6026,  0.2073, -0.6206],\n",
-       "          [-0.2063,  0.4328, -0.3127,  ..., -0.0213,  0.1423, -0.4487],\n",
-       "          [-0.0311, -0.0904,  0.1301,  ...,  0.1081,  0.2348,  0.0307]],\n",
-       "\n",
-       "         [[ 0.1281,  0.1529,  0.5292,  ...,  0.2519,  0.2350,  0.1265],\n",
-       "          [-0.0148,  0.2971,  0.1635,  ..., -0.1518, -0.3768,  0.1412],\n",
-       "          [-0.0972,  0.3895, -0.0085,  ...,  0.2106, -0.1402,  0.2013],\n",
-       "          ...,\n",
-       "          [-0.1952,  0.1003,  0.4971,  ...,  0.1800,  0.1716, -0.1752],\n",
-       "          [-0.0194,  0.2476,  0.0372,  ...,  0.4616,  0.7776,  0.1702],\n",
-       "          [ 0.3126,  0.3965,  0.4860,  ...,  0.1537,  0.2657,  0.2198]]]],\n",
-       "       grad_fn=<ConvolutionBackward0>)"
+       "torch.Size([1, 2, 36, 36])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output"
+    "output.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[0, 1, 1,  ..., 1, 0, 1],\n",
-       "         [1, 0, 0,  ..., 0, 0, 1],\n",
-       "         [0, 1, 0,  ..., 1, 1, 1],\n",
-       "         ...,\n",
-       "         [0, 0, 1,  ..., 1, 0, 1],\n",
-       "         [1, 0, 1,  ..., 1, 1, 1],\n",
-       "         [1, 1, 1,  ..., 1, 1, 1]]])"
+       "torch.Size([1, 1, 36, 36])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.argmax(F.softmax(output, dim=1), dim=1)"
+    "torch.argmax(F.softmax(output, dim=1), dim=1).view(-1, 1, 36, 36).shape"
    ]
   }
  ],
