only reshape for metric

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,16 +956,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input = torch.rand((1, 1,36,36))"
+    "input = torch.rand((128, 1,36,36))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,42 +974,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 2, 36, 36])"
+       "torch.Size([165888])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output.shape"
+    "labels.view(-1).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 1, 36, 36])"
+       "torch.Size([165888])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.argmax(F.softmax(output, dim=1), dim=1).view(-1, 1, 36, 36).shape"
+    "torch.argmax(F.softmax(output, dim=1), dim=1).view(-1).shape"
    ]
   }
  ],
