update baseline code and new predictions

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,14 +110,14 @@
     "  df = pd.DataFrame(data=data_dict, columns=['filename', 'well_number', 'patch_number', 'data'])\n",
     "  return df.sort_values(by=['well_number','patch_number'])\n",
     "\n",
-    "def build_dataloaders(test_dataframe, train_dataframe):\n",
+    "def build_dataloaders(test_dataframe, train_dataframe, permutation):\n",
     "    test_data = torch.from_numpy(np.vstack(test_dataframe['data'].to_numpy()))\n",
     "    test_data = torch.nan_to_num(test_data)\n",
     "    X_names = np.vstack(test_dataframe['filename'].to_numpy())\n",
     "\n",
     "    train_data = torch.from_numpy(np.vstack(train_dataframe['data'].to_numpy()))\n",
     "    train_data = torch.nan_to_num(train_data)\n",
-    "    p = np.random.permutation(len(train_data))\n",
+    "    p = permutation\n",
     "    train_data = train_data[p]\n",
     "\n",
     "    offset = int(len(train_data) * .8)\n",
@@ -133,21 +133,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import unet\n",
+    "import json\n",
     "model = unet.UNet(n_channels=1, n_classes=1)\n",
-    "model.load_state_dict(torch.load('./unet_1.pt', map_location=torch.device('cpu')))\n",
+    "model.load_state_dict(torch.load('./unet_3.pt', map_location=torch.device('cpu')))\n",
     "test_df = build_test_dataframe()\n",
-    "train_df = build_train_dataframe()\n",
-    "X_test, X_names, X_train = build_dataloaders(test_df, train_df)"
+    "train_df = build_train_dataframe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./train_set_permutation.json') as f:\n",
+    "  permutation = json.load(f)\n",
+    "X_test, X_names, X_train = build_dataloaders(test_df, train_df, permutation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,14 +167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2538it [00:15, 163.19it/s]\n"
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2538it [00:33, 76.32it/s]\n"
      ]
     }
    ],
@@ -179,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,11 +206,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds_df.to_csv('KIRBY_predictions_2.csv')"
+    "preds_df.to_csv('KIRBY_predictions_3.csv')"
    ]
   }
  ],
