results of large UNET prediction

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -133,21 +133,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import unet\n",
+    "import baseline\n",
     "import json\n",
-    "model = unet.UNet(n_channels=1, n_classes=1)\n",
-    "model.load_state_dict(torch.load('./unet_3.pt', map_location=torch.device('cpu')))\n",
+    "# model = unet.UNet(n_channels=1, n_classes=1)\n",
+    "model = baseline.Baseline()\n",
+    "model.load_state_dict(torch.load('./baseline_model_1.pt', map_location=torch.device('cpu')))\n",
     "test_df = build_test_dataframe()\n",
     "train_df = build_train_dataframe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,21 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2538it [00:33, 76.32it/s]\n"
+      "2538it [00:09, 274.19it/s]\n"
      ]
     }
    ],
@@ -197,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,11 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds_df.to_csv('KIRBY_predictions_3.csv')"
+    "preds_df.to_csv('KIRBY_predictions_4.csv')"
    ]
   }
  ],
