--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2307,6 +2307,106 @@
     "\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=128)\n",
     "valid_dataloader = DataLoader(valid_dataset, batch_size=128)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classification Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe = build_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "data = torch.from_numpy(np.vstack(dataframe['data'].to_numpy()))\n",
+    "data = torch.nan_to_num(data)\n",
+    "labels = torch.from_numpy(np.vstack(dataframe['well_number'].to_numpy())).squeeze() - 1\n",
+    "\n",
+    "p = np.random.permutation(len(data))\n",
+    "data, labels = data[p], labels[p]\n",
+    "\n",
+    "offset = int(len(data) * .8)\n",
+    "X_train, X_valid = data[:offset], data[offset:]\n",
+    "Y_train, Y_valid = labels[:offset].float(), labels[offset:].float()\n",
+    "\n",
+    "scaler = RobustScaler()\n",
+    "scaler.fit(X_train)\n",
+    "X_train = torch.tensor(scaler.transform(X_train)).float().reshape(-1, 1, 36, 36)\n",
+    "X_valid = torch.tensor(scaler.transform(X_valid)).float().reshape(-1, 1, 36, 36)\n",
+    "\n",
+    "examples_to_augment = X_train\n",
+    "labels_to_augment = Y_train\n",
+    "\n",
+    "rolled_x, rolled_y = [], []\n",
+    "for i in range(1, 36):\n",
+    "    rolled_x.append(torch.roll(examples_to_augment, i, dims=3))\n",
+    "    rolled_y.append(labels_to_augment)\n",
+    "\n",
+    "X_train, Y_train = torch.vstack((X_train, *rolled_x)), torch.hstack((Y_train, *rolled_y))\n",
+    "\n",
+    "flipper = v2.RandomVerticalFlip(1)\n",
+    "X_train, Y_train = torch.vstack((X_train, flipper(examples_to_augment))), torch.hstack((Y_train, labels_to_augment))\n",
+    "\n",
+    "# train_dataset = WellsDataset(X_train, Y_train, None)\n",
+    "# valid_dataset = WellsDataset(X_valid, Y_valid, None)\n",
+    "\n",
+    "# train_dataloader = DataLoader(train_dataset, batch_size=128)\n",
+    "# valid_dataloader = DataLoader(valid_dataset, batch_size=128)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([279276, 1, 36, 36])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([279276])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_train.shape"
    ]
   }
  ],
