--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -2318,30 +2318,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe = build_dataframe()"
+    "def build_test_dataframe():\n",
+    "  data_dir = './test/images/'\n",
+    "  data_dict = []\n",
+    "  pattern = r'well_(\\d+)_patch_(\\d+)\\.npy'\n",
+    "  for i, filename in enumerate(os.listdir(data_dir)):\n",
+    "      example = np.load(data_dir + filename)\n",
+    "      match = re.match(pattern, filename)\n",
+    "      name = filename[:-4]\n",
+    "      if match:\n",
+    "          well_number = int(match.group(1))  # Extract well number\n",
+    "          patch_number = int(match.group(2)) # Extract patch number\n",
+    "      else:\n",
+    "          print(\"Filename format does not match the expected pattern.\")  \n",
+    "\n",
+    "      data_dict.append((name, well_number, patch_number, example.flatten()))\n",
+    "\n",
+    "  df = pd.DataFrame(data=data_dict, columns=['filename', 'well_number', 'patch_number', 'data'])\n",
+    "  return df.sort_values(by=['well_number','patch_number'])\n",
+    "\n",
+    "def build_dataframe():\n",
+    "    data_dir = './train/images/'\n",
+    "    data_dict = []\n",
+    "    pattern = r'well_(\\d+)_patch_(\\d+)\\.npy'\n",
+    "    for i, filename in enumerate(os.listdir(data_dir)):\n",
+    "        example = np.load(data_dir + filename)\n",
+    "        match = re.match(pattern, filename)\n",
+    "        if match:\n",
+    "            well_number = int(match.group(1))  # Extract well number\n",
+    "            patch_number = int(match.group(2)) # Extract patch number\n",
+    "        else:\n",
+    "            print(\"Filename format does not match the expected pattern.\")  \n",
+    "\n",
+    "        data_dict.append((filename, well_number, patch_number, example.flatten()))\n",
+    "\n",
+    "    df = pd.DataFrame(data=data_dict, columns=['filename', 'well_number', 'patch_number', 'data'])\n",
+    "\n",
+    "    df_y = pd.read_csv('train/y_train.csv')\n",
+    "    df_y['Unnamed: 0'] = df_y['Unnamed: 0'] + '.npy'\n",
+    "\n",
+    "    # Create single dataframe with data and labels as lists\n",
+    "    merged = pd.merge(df, df_y, how='left', left_on='filename', right_on='Unnamed: 0')\n",
+    "    data_columns = [str(i) for i in range(1296)]\n",
+    "    labeled_data = merged[data_columns].to_numpy()\n",
+    "    # Convert missing labels to all zeros\n",
+    "    labeled_data = np.nan_to_num(labeled_data)\n",
+    "    merged['labels'] = labeled_data.tolist()\n",
+    "    merged = merged.rename(columns={'Unnamed: 0':'label_name'})\n",
+    "    merged = merged.fillna(0.0)\n",
+    "\n",
+    "    data = torch.from_numpy(np.vstack(merged['data'].to_numpy(dtype=np.ndarray)))\n",
+    "    # Remove corruputed samples\n",
+    "    outliers = ((data.min(dim=1, keepdim=True).values == -999.2500) == True).flatten()\n",
+    "\n",
+    "    merged = merged.drop(merged.loc[outliers.tolist()].index)\n",
+    "    return merged"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataframe = build_dataframe()\n",
+    "valid_dataframe = build_test_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "data = torch.from_numpy(np.vstack(dataframe['data'].to_numpy()))\n",
+    "data = torch.from_numpy(np.vstack(train_dataframe['data'].to_numpy()))\n",
     "data = torch.nan_to_num(data)\n",
-    "labels = torch.from_numpy(np.vstack(dataframe['well_number'].to_numpy())).squeeze() - 1\n",
+    "labels = torch.from_numpy(np.vstack(train_dataframe['well_number'].to_numpy())).squeeze() - 1\n",
     "\n",
-    "p = np.random.permutation(len(data))\n",
-    "data, labels = data[p], labels[p]\n",
+    "valid_data = torch.from_numpy(np.vstack(valid_dataframe['data'].to_numpy()))\n",
+    "valid_data = torch.nan_to_num(valid_data)\n",
+    "valid_labels = torch.from_numpy(np.vstack(valid_dataframe['well_number'].to_numpy())).squeeze() - 1\n",
     "\n",
-    "offset = int(len(data) * .8)\n",
-    "X_train, X_valid = data[:offset], data[offset:]\n",
-    "Y_train, Y_valid = labels[:offset].float(), labels[offset:].float()\n",
+    "X_train, X_valid = data, valid_data\n",
+    "Y_train, Y_valid = labels, valid_labels\n",
     "\n",
     "scaler = RobustScaler()\n",
     "scaler.fit(X_train)\n",
@@ -2361,26 +2425,25 @@
     "flipper = v2.RandomVerticalFlip(1)\n",
     "X_train, Y_train = torch.vstack((X_train, flipper(examples_to_augment))), torch.hstack((Y_train, labels_to_augment))\n",
     "\n",
-    "# train_dataset = WellsDataset(X_train, Y_train, None)\n",
-    "# valid_dataset = WellsDataset(X_valid, Y_valid, None)\n",
+    "train_dataset = WellsDataset(X_train, Y_train, None)\n",
+    "valid_dataset = WellsDataset(X_valid, Y_valid, None)\n",
     "\n",
-    "# train_dataloader = DataLoader(train_dataset, batch_size=128)\n",
-    "# valid_dataloader = DataLoader(valid_dataset, batch_size=128)\n",
-    "\n"
+    "train_dataloader = DataLoader(train_dataset, batch_size=128)\n",
+    "valid_dataloader = DataLoader(valid_dataset, batch_size=128)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([279276, 1, 36, 36])"
+       "torch.Size([349095, 1, 36, 36])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2391,22 +2454,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([279276])"
+       "torch.Size([349095])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([9435, 1, 36, 36])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_valid.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2538])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_valid.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2538, 1296)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.vstack(valid_dataframe['data'].to_numpy()).shape"
    ]
   }
  ],
