create individually scaled dataset

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,6 +206,172 @@
    "outputs": [],
    "source": [
     "preds_df.to_csv('KIRBY_predictions_4.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pipe Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_pipe_id_dataloaders(train_dataframe, valid_dataframe, p):\n",
+    "  data = torch.from_numpy(np.vstack(train_dataframe['data'].to_numpy()))\n",
+    "  data = torch.nan_to_num(data)\n",
+    "  labels = torch.from_numpy(np.vstack(train_dataframe['labels'].to_numpy()))\n",
+    "\n",
+    "  valid_data = torch.from_numpy(np.vstack(valid_dataframe['data'].to_numpy()))\n",
+    "  valid_data = torch.nan_to_num(valid_data)\n",
+    "  valid_labels = torch.from_numpy(np.vstack(valid_dataframe['well_number'].to_numpy())).squeeze() - 1\n",
+    "  X_names = np.vstack(valid_dataframe['filename'].to_numpy())\n",
+    "\n",
+    "  data = data[p]\n",
+    "  offset = int(len(data) * .5)\n",
+    "\n",
+    "  X_train, X_valid = data[:offset], valid_data\n",
+    "  Y_train, Y_valid = labels[:offset], valid_labels\n",
+    "\n",
+    "  scaler = RobustScaler()\n",
+    "  scaler.fit(X_train)\n",
+    "  X_train = torch.tensor(scaler.transform(X_train)).float().reshape(-1, 1, 36, 36)\n",
+    "  X_valid = torch.tensor(scaler.transform(X_valid)).float().reshape(-1, 1, 36, 36)\n",
+    "\n",
+    "  return X_valid, X_train, Y_train, X_names\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pipe_identifier\n",
+    "import json\n",
+    "with open('./classification_train_set_permutation.json') as f:\n",
+    "  p = json.load(f)\n",
+    "X_test, X_train, Y_train, X_names = get_pipe_id_dataloaders(build_train_dataframe(), build_test_dataframe(), p)\n",
+    "model = pipe_identifier.PipeIdentifier(num_classes=15)\n",
+    "model.load_state_dict(torch.load('./well_classifier_1.pt', map_location=torch.device('cpu')))\n",
+    "pipe_id_dataloader = DataLoader(TensorDataset(X_test), batch_size=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2538it [00:17, 148.96it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = {}\n",
+    "model.eval()\n",
+    "for index, x in tqdm(enumerate(pipe_id_dataloader)):\n",
+    "  out = model(x[0])\n",
+    "  preds = torch.argmax(F.softmax(out, dim=1))\n",
+    "  name = X_names[index][0]\n",
+    "  predictions[name] = preds.flatten().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds_df = pd.DataFrame.from_dict(predictions, orient='index')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2     2377\n",
+       "8      137\n",
+       "9       16\n",
+       "10       7\n",
+       "14       1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds_df.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "4717it [00:31, 150.14it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = {}\n",
+    "model.eval()\n",
+    "for index, x in tqdm(enumerate(X_train)):\n",
+    "  out = model(x.unsqueeze(dim=0))\n",
+    "  preds = torch.argmax(F.softmax(out, dim=1))\n",
+    "  name = Y_train[index][0]\n",
+    "  predictions[name] = preds.flatten().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds_df = pd.DataFrame.from_dict(predictions, orient='index')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2     4699\n",
+       "8       15\n",
+       "14       2\n",
+       "9        1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds_df.value_counts()"
    ]
   }
  ],
