--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -22,7 +22,8 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import RobustScaler\n",
     "from tqdm import tqdm\n",
-    "import random"
+    "import random\n",
+    "import json"
    ]
   },
   {
@@ -569,35 +570,8 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CUDA not available, switching to MPS\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "global DEVICE\n",
-    "DEVICE = torch.device('cpu')\n",
-    "if torch.cuda.is_available():\n",
-    "    DEVICE = torch.device('cuda:0')\n",
-    "    print(\"CUDA is available and is used\")\n",
-    "elif not torch.backends.mps.is_available():\n",
-    "    if not torch.backends.mps.is_built():\n",
-    "        print(\"MPS not available because the current PyTorch install was not \"\n",
-    "            \"built with MPS enabled.\")\n",
-    "    else:\n",
-    "        print(\"MPS not available because the current MacOS version is not 12.3+ \"\n",
-    "            \"and/or you do not have an MPS-enabled device on this machine.\")\n",
-    "    DEVICE = torch.device('cpu')\n",
-    "    print(\"CUDA and MPS are not available, switching to CPU.\")\n",
-    "else:\n",
-    "    DEVICE = torch.device(\"mps\")\n",
-    "    print(\"CUDA not available, switching to MPS\")\n",
-    "\n",
-    "\n",
     "class WellsDataset(Dataset):\n",
     "    def __init__(self, data, labels, transform):\n",
     "        self.data = data\n",
@@ -619,80 +593,145 @@
     "        return image, label\n",
     "    \n",
     "def build_dataframe():\n",
-    "  if os.path.exists('./inputs/x_train_df.csv'):\n",
-    "      return pd.read_csv('inputs/x_train_df.csv')\n",
+    "    data_dir = './train/images/'\n",
+    "    data_dict = []\n",
+    "    pattern = r'well_(\\d+)_patch_(\\d+)\\.npy'\n",
+    "    for i, filename in enumerate(os.listdir(data_dir)):\n",
+    "        example = np.load(data_dir + filename)\n",
+    "        match = re.match(pattern, filename)\n",
+    "        if match:\n",
+    "            well_number = int(match.group(1))  # Extract well number\n",
+    "            patch_number = int(match.group(2)) # Extract patch number\n",
+    "        else:\n",
+    "            print(\"Filename format does not match the expected pattern.\")  \n",
     "\n",
-    "  data_dir = './train/images/'\n",
+    "        data_dict.append((filename, well_number, patch_number, example.flatten()))\n",
+    "\n",
+    "    df = pd.DataFrame(data=data_dict, columns=['filename', 'well_number', 'patch_number', 'data'])\n",
+    "\n",
+    "    df_y = pd.read_csv('train/y_train.csv')\n",
+    "    df_y['Unnamed: 0'] = df_y['Unnamed: 0'] + '.npy'\n",
+    "\n",
+    "    # Create single dataframe with data and labels as lists\n",
+    "    merged = pd.merge(df, df_y, how='left', left_on='filename', right_on='Unnamed: 0')\n",
+    "    data_columns = [str(i) for i in range(1296)]\n",
+    "    labeled_data = merged[data_columns].to_numpy()\n",
+    "    # Convert missing labels to all zeros\n",
+    "    labeled_data = np.nan_to_num(labeled_data)\n",
+    "    merged['labels'] = labeled_data.tolist()\n",
+    "    merged = merged.rename(columns={'Unnamed: 0':'label_name'})\n",
+    "    merged = merged.fillna(0.0)\n",
+    "\n",
+    "    data = torch.from_numpy(np.vstack(merged['data'].to_numpy(dtype=np.ndarray)))\n",
+    "    # Remove corruputed samples\n",
+    "    outliers = ((data.min(dim=1, keepdim=True).values == -999.2500) == True).flatten()\n",
+    "\n",
+    "    merged = merged.drop(merged.loc[outliers.tolist()].index)\n",
+    "    return merged\n",
+    "\n",
+    "def build_dataloaders(dataframe):\n",
+    "    data = torch.from_numpy(np.vstack(dataframe['data'].to_numpy()))\n",
+    "    data = torch.nan_to_num(data)\n",
+    "    labels = torch.from_numpy(np.vstack(dataframe['labels'].to_numpy()))\n",
+    "\n",
+    "    p = np.random.permutation(len(data))\n",
+    "    with open('train_set_permutation.json', 'w') as f:\n",
+    "        # Write permutation to file so that we can re-apply the same transform later\n",
+    "        json.dump(p.tolist(), f)\n",
+    "\n",
+    "    data, labels = data[p], labels[p]\n",
+    "\n",
+    "    offset = int(len(data) * .8)\n",
+    "    X_train, X_valid = data[:offset], data[offset:]\n",
+    "    Y_train, Y_valid = labels[:offset].float().reshape(-1, 1, 36, 36), labels[offset:].float().reshape(-1, 1, 36, 36)\n",
+    "\n",
+    "    scaler = RobustScaler()\n",
+    "    scaler.fit(X_train)\n",
+    "    X_train = torch.tensor(scaler.transform(X_train)).float().reshape(-1, 1, 36, 36)\n",
+    "    X_valid = torch.tensor(scaler.transform(X_valid)).float().reshape(-1, 1, 36, 36)\n",
+    "\n",
+    "    # Applying augmentations selectively does not improve performance\n",
+    "    # num_non_zero_y = torch.count_nonzero(labels[:offset], axis=1)\n",
+    "    examples_to_augment = X_train\n",
+    "    labels_to_augment = Y_train\n",
+    "\n",
+    "    rolled_x, rolled_y = [], []\n",
+    "    for i in range(1, 36):\n",
+    "        rolled_x.append(torch.roll(examples_to_augment, i, dims=3))\n",
+    "        rolled_y.append(torch.roll(labels_to_augment, i, dims=3))\n",
+    "\n",
+    "    X_train, Y_train = torch.vstack((X_train, *rolled_x)), torch.vstack((Y_train, *rolled_y))\n",
+    "\n",
+    "    flipper = v2.RandomVerticalFlip(1)\n",
+    "    X_train, Y_train = torch.vstack((X_train, flipper(examples_to_augment))), torch.vstack((Y_train, flipper(labels_to_augment)))\n",
+    "\n",
+    "    train_dataset = WellsDataset(X_train, Y_train, None)\n",
+    "    valid_dataset = WellsDataset(X_valid, Y_valid, None)\n",
+    "\n",
+    "    train_dataloader = DataLoader(train_dataset, batch_size=128)\n",
+    "    valid_dataloader = DataLoader(valid_dataset, batch_size=128)\n",
+    "\n",
+    "    return train_dataloader, valid_dataloader\n",
+    "\n",
+    "def build_test_dataframe():\n",
+    "  data_dir = './test/images/'\n",
     "  data_dict = []\n",
     "  pattern = r'well_(\\d+)_patch_(\\d+)\\.npy'\n",
     "  for i, filename in enumerate(os.listdir(data_dir)):\n",
     "      example = np.load(data_dir + filename)\n",
     "      match = re.match(pattern, filename)\n",
+    "      name = filename[:-4]\n",
     "      if match:\n",
     "          well_number = int(match.group(1))  # Extract well number\n",
     "          patch_number = int(match.group(2)) # Extract patch number\n",
     "      else:\n",
     "          print(\"Filename format does not match the expected pattern.\")  \n",
     "\n",
-    "      data_dict.append((filename, well_number, patch_number, example.flatten()))\n",
+    "      data_dict.append((name, well_number, patch_number, example.flatten()))\n",
     "\n",
     "  df = pd.DataFrame(data=data_dict, columns=['filename', 'well_number', 'patch_number', 'data'])\n",
+    "  return df.sort_values(by=['well_number','patch_number'])\n",
     "\n",
-    "  df_y = pd.read_csv('train/y_train.csv')\n",
-    "  df_y['Unnamed: 0'] = df_y['Unnamed: 0'] + '.npy'\n",
+    "def build_dataloaders_for_classiication(train_dataframe):\n",
+    "    data = torch.from_numpy(np.vstack(train_dataframe['data'].to_numpy()))\n",
+    "    data = torch.nan_to_num(data)\n",
+    "    labels = torch.from_numpy(np.vstack(train_dataframe['well_number'].to_numpy())).squeeze() - 1\n",
     "\n",
-    "  # Create single dataframe with data and labels as lists\n",
-    "  merged = pd.merge(df, df_y, how='left', left_on='filename', right_on='Unnamed: 0')\n",
-    "  data_columns = [str(i) for i in range(1296)]\n",
-    "  labeled_data = merged[data_columns].to_numpy()\n",
-    "  # Convert missing labels to all zeros\n",
-    "  labeled_data = np.nan_to_num(labeled_data)\n",
-    "  merged['labels'] = labeled_data.tolist()\n",
-    "  merged = merged.rename(columns={'Unnamed: 0':'label_name'})\n",
-    "  merged = merged.fillna(0.0)\n",
+    "    p = np.random.permutation(len(data))\n",
+    "    with open('train_set_permutation.json', 'w') as f:\n",
+    "        # Write permutation to file so that we can re-apply the same transform later\n",
+    "        json.dump(p.tolist(), f)\n",
     "\n",
-    "  data = torch.from_numpy(np.vstack(merged['data'].to_numpy(dtype=np.ndarray)))\n",
-    "  # Remove corruputed samples\n",
-    "  outliers = ((data.min(dim=1, keepdim=True).values == -999.2500) == True).flatten()\n",
+    "    data, labels = data[p], labels[p]\n",
+    "    offset = int(len(data) * .5)\n",
+    "    X_train, X_valid = data[:offset], data[offset:]\n",
+    "    Y_train, Y_valid = labels[:offset], labels[offset:]\n",
     "\n",
-    "  merged = merged.drop(merged.loc[outliers.tolist()].index)\n",
-    "  merged.to_csv(path_or_buf='./inputs/x_train_df.csv')\n",
-    "  return merged\n",
+    "    scaler = RobustScaler()\n",
+    "    scaler.fit(X_train)\n",
+    "    X_train = torch.tensor(scaler.transform(X_train)).float().reshape(-1, 1, 36, 36)\n",
+    "    X_valid = torch.tensor(scaler.transform(X_valid)).float().reshape(-1, 1, 36, 36)\n",
     "\n",
-    "def build_dataloaders(dataframe):\n",
-    "  data = torch.from_numpy(np.vstack(dataframe['data'].to_numpy()))\n",
-    "  data = torch.nan_to_num(data)\n",
-    "  labels = torch.from_numpy(np.vstack(dataframe['labels'].to_numpy())).reshape(-1, 1, 36, 36)\n",
+    "    examples_to_augment = X_train\n",
+    "    labels_to_augment = Y_train\n",
     "\n",
-    "  p = np.random.permutation(len(data))\n",
-    "  data, labels = data[p], labels[p]\n",
+    "    rolled_x, rolled_y = [], []\n",
+    "    for i in range(1, 36):\n",
+    "        rolled_x.append(torch.roll(examples_to_augment, i, dims=3))\n",
+    "        rolled_y.append(labels_to_augment)\n",
     "\n",
-    "  offset = int(len(data) * .8)\n",
-    "  X_train, X_valid = data[:offset], data[offset:]\n",
-    "  Y_train, Y_valid = labels[:offset].float(), labels[offset:].float()\n",
+    "    X_train, Y_train = torch.vstack((X_train, *rolled_x)), torch.hstack((Y_train, *rolled_y))\n",
     "\n",
-    "  scaler = RobustScaler()\n",
-    "  scaler.fit(X_train)\n",
-    "  X_train = torch.tensor(scaler.transform(X_train)).float().reshape(-1, 1, 36, 36)\n",
-    "  X_valid = torch.tensor(scaler.transform(X_valid)).float().reshape(-1, 1, 36, 36)\n",
-    "  \n",
-    "  rolled_x, rolled_y = [], []\n",
-    "  for i in range(1, 36, 2):\n",
-    "    rolled_x.append(torch.roll(X_train, i, dims=3))\n",
-    "    rolled_y.append(torch.roll(Y_train, i, dims=3))\n",
+    "    flipper = v2.RandomVerticalFlip(1)\n",
+    "    X_train, Y_train = torch.vstack((X_train, flipper(examples_to_augment))), torch.hstack((Y_train, labels_to_augment))\n",
     "\n",
-    "  X_train, Y_train = torch.vstack((X_train, *rolled_x)), torch.vstack((Y_train, *rolled_y))\n",
+    "    train_dataset = WellsDataset(X_train, Y_train, None)\n",
+    "    valid_dataset = WellsDataset(X_valid, Y_valid, None)\n",
     "\n",
-    "  flipper = v2.RandomVerticalFlip(1)\n",
-    "  X_train, Y_train = torch.vstack((X_train, flipper(X_train))), torch.vstack((Y_train, flipper(Y_train)))\n",
-    "  \n",
-    "  train_dataset = WellsDataset(X_train, Y_train, None)\n",
-    "  valid_dataset = WellsDataset(X_valid, Y_valid, None)\n",
+    "    train_dataloader = DataLoader(train_dataset, batch_size=128)\n",
+    "    valid_dataloader = DataLoader(valid_dataset, batch_size=128)\n",
     "\n",
-    "  train_dataloader = DataLoader(train_dataset, batch_size=128)\n",
-    "  valid_dataloader = DataLoader(valid_dataset, batch_size=128)\n",
-    "\n",
-    "  return train_dataloader, valid_dataloader"
+    "    return train_dataloader, valid_dataloader\n"
    ]
   },
   {
@@ -2510,6 +2549,27 @@
    ],
    "source": [
     "Y_valid.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Build Individually Normalized Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir = './train/images/'\n",
+    "output_dir = './train/processed_images/'\n",
+    "for i, filename in enumerate(os.listdir(data_dir)):\n",
+    "    example = np.load(data_dir + filename)\n",
+    "    scaled = RobustScaler().fit_transform(example)\n",
+    "    np.save(output_dir + filename, scaled)"
    ]
   }
  ],
