--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -125,11 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_pipe_id_dataloaders(train_dataframe, valid_dataframe, p):\n",
+    "\n",
+    "def get_pipe_id_dataloaders(train_dataframe, valid_dataframe):\n",
     "  data = torch.from_numpy(np.vstack(train_dataframe['data'].to_numpy()))\n",
     "  data = torch.nan_to_num(data)\n",
     "  labels = torch.from_numpy(np.vstack(train_dataframe['labels'].to_numpy()))\n",
@@ -139,46 +140,56 @@
     "  valid_labels = torch.from_numpy(np.vstack(valid_dataframe['well_number'].to_numpy())).squeeze() - 1\n",
     "  X_names = np.vstack(valid_dataframe['filename'].to_numpy())\n",
     "\n",
-    "  data = data[p]\n",
-    "  offset = int(len(data) * .5)\n",
+    "  X_train, X_valid = data.float().reshape(-1, 1, 36, 36), valid_data.float().reshape(-1, 1, 36, 36)\n",
+    "  Y_train, Y_valid = labels, valid_labels\n",
     "\n",
-    "  X_train, X_valid = data[:offset], valid_data\n",
-    "  Y_train, Y_valid = labels[:offset], valid_labels\n",
-    "\n",
-    "  scaler = RobustScaler()\n",
-    "  scaler.fit(X_train)\n",
-    "  X_train = torch.tensor(scaler.transform(X_train)).float().reshape(-1, 1, 36, 36)\n",
-    "  X_valid = torch.tensor(scaler.transform(X_valid)).float().reshape(-1, 1, 36, 36)\n",
-    "\n",
-    "  return X_valid, X_train, Y_train, X_names\n"
+    "  return X_train, X_valid, Y_train, Y_valid, X_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pipe_identifier\n",
     "import json\n",
-    "with open('./classification_train_set_permutation.json') as f:\n",
-    "  p = json.load(f)\n",
-    "X_test, X_train, Y_train, X_names = get_pipe_id_dataloaders(build_train_dataframe(), build_test_dataframe(), p)\n",
+    "\n",
+    "X_train, X_valid, Y_train, Y_valid, X_names = get_pipe_id_dataloaders(data_pipeline.build_dataframe(), data_pipeline.build_test_dataframe())\n",
     "model = pipe_identifier.PipeIdentifier(num_classes=15)\n",
-    "model.load_state_dict(torch.load('./well_classifier_1.pt', map_location=torch.device('cpu')))\n",
-    "pipe_id_dataloader = DataLoader(TensorDataset(X_test), batch_size=1)"
+    "model.load_state_dict(torch.load('./well_classifier_2.pt', map_location=torch.device('cpu')))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe_id_dataloader = DataLoader(TensorDataset(X_valid), batch_size=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2538it [00:17, 148.96it/s]\n"
+      "2538it [00:20, 121.54it/s]\n"
      ]
     }
    ],
@@ -194,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,21 +214,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2     2377\n",
-       "8      137\n",
-       "9       16\n",
-       "10       7\n",
-       "14       1\n",
+       "12    2397\n",
+       "5       87\n",
+       "10      54\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
