evaluating pred 6, trying pipe predictor

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -28,35 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CUDA not available, switching to MPS\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import unet\n",
     "import baseline\n",
     "import json\n",
     "model = unet.UNet(n_channels=1, n_classes=1)\n",
     "# model = baseline.Baseline()\n",
-    "model.load_state_dict(torch.load('./unet_5.pt', map_location=torch.device('cpu')))\n",
-    "test_df = data_pipeline.build_test_dataframe(use_processed_images=True)\n",
-    "train_df = data_pipeline.build_dataframe(use_processed_images=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_test, X_names, X_train = data_pipeline.build_test_dataloaders(test_df, train_df)"
+    "model.load_state_dict(torch.load('./unet_8.pt', map_location=torch.device('cpu')))\n",
+    "test_df = data_pipeline.build_test_dataframe(use_processed_images=False)\n",
+    "train_df = data_pipeline.build_dataframe(use_processed_images=False)"
    ]
   },
   {
@@ -65,12 +48,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_dl = DataLoader(TensorDataset(X_test), batch_size=1)"
+    "X_test, X_names, X_train = data_pipeline.build_test_dataloaders(test_df, train_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dl = DataLoader(TensorDataset(X_test), batch_size=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +76,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2538it [00:25, 98.06it/s] \n"
+      "2538it [00:24, 102.59it/s]\n"
      ]
     }
    ],
@@ -100,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds_df.to_csv('KIRBY_predictions_5.csv')"
+    "preds_df.to_csv('KIRBY_predictions_6.csv')"
    ]
   },
   {
@@ -265,6 +257,28 @@
    "outputs": [],
    "source": [
     "preds_df = pd.DataFrame.from_dict(predictions, orient='index')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Performance so far\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Unet 5  - 0.38 validation IoU - Two Down Convs + All Images Scaled + Bulk Augments\n",
+    "- Unet 8  - 0.64 validation IoU - Two Down Convs + No Scaling + Random Augments\n",
+    "- Unet 9  - 0.63 validation IoU - Three down convs + No Scaling + Random Augments\n",
+    "- Unet 10 - 0.57 validation IoU - One down conv + No Scaling + Random Augments\n",
+    "\n",
+    "\n",
+    "However on the test set our results are much worse. But it appears that the scaling does not make much of a difference\n",
+    "\n",
+    "When looking at the output we are just predicting 0.0 for everything, and that is how we wind up with an unchanged score"
    ]
   }
  ],
