--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,12 +160,12 @@
     "\n",
     "X_train, X_valid, Y_train, Y_valid, X_names = get_pipe_id_dataloaders(data_pipeline.build_dataframe(), data_pipeline.build_test_dataframe())\n",
     "model = pipe_identifier.PipeIdentifier(num_classes=15)\n",
-    "model.load_state_dict(torch.load('./well_classifier_2.pt', map_location=torch.device('cpu')))\n"
+    "model.load_state_dict(torch.load('./well_classifier_3.pt', map_location=torch.device('cpu')))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2538it [00:20, 121.54it/s]\n"
+      "2538it [00:18, 139.39it/s]\n"
      ]
     }
    ],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,19 +206,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12    2397\n",
-       "5       87\n",
-       "10      54\n",
+       "12    2334\n",
+       "9       97\n",
+       "10      79\n",
+       "2       21\n",
+       "5        4\n",
+       "6        2\n",
+       "4        1\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,14 +233,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "4717it [00:31, 150.14it/s]\n"
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "9670it [01:11, 135.99it/s]\n"
      ]
     }
    ],
@@ -252,11 +263,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds_df = pd.DataFrame.from_dict(predictions, orient='index')"
+    "preds_df = pd.DataFrame.from_dict(predictions, orient='index')\n",
+    "preds_df[0] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13    5081\n",
+       "3     2197\n",
+       "11    1517\n",
+       "7      438\n",
+       "10     190\n",
+       "2      162\n",
+       "6       74\n",
+       "1        8\n",
+       "15       2\n",
+       "9        1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds_df.value_counts()"
    ]
   },
   {
