--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -2592,6 +2592,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "well_number\n",
+       "13    1905\n",
+       "3     1774\n",
+       "7     1654\n",
+       "11    1508\n",
+       "6      964\n",
+       "2      616\n",
+       "14     355\n",
+       "15     203\n",
+       "1      166\n",
+       "9      166\n",
+       "5       98\n",
+       "10      80\n",
+       "8       78\n",
+       "4       59\n",
+       "12      44\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe['well_number'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
