train unet with no split and scaling

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "import json\n",
     "model = unet.UNet(n_channels=1, n_classes=1)\n",
     "# model = baseline.Baseline()\n",
-    "model.load_state_dict(torch.load('./unet_8.pt', map_location=torch.device('cpu')))\n",
+    "model.load_state_dict(torch.load('./unet_11.pt', map_location=torch.device('cpu')))\n",
     "test_df = data_pipeline.build_test_dataframe(use_processed_images=False)\n",
     "train_df = data_pipeline.build_dataframe(use_processed_images=False)"
    ]
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,21 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2538it [00:24, 102.59it/s]\n"
+      "2538it [00:31, 80.52it/s]\n"
      ]
     }
    ],
@@ -92,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,11 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds_df.to_csv('KIRBY_predictions_6.csv')"
+    "preds_df.to_csv('KIRBY_predictions_7.csv')"
    ]
   },
   {
@@ -320,7 +313,10 @@
     "\n",
     "However on the test set our results are much worse. But it appears that the scaling does not make much of a difference\n",
     "\n",
-    "When looking at the output we are just predicting 0.0 for everything, and that is how we wind up with an unchanged score"
+    "When looking at the output we are just predicting 0.0 for everything, and that is how we wind up with an unchanged score\n",
+    "\n",
+    "- Unet 11 - 0.59 train IoU - Two Down Convs + No Scaling + Random Augments + No Train Test Split\n",
+    "  - predicts 481 total 1.0... probably not it either"
    ]
   }
  ],
