--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +28,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA not available, switching to MPS\n"
+     ]
+    }
+   ],
    "source": [
     "import unet\n",
     "import baseline\n",
     "import json\n",
     "model = unet.UNet(n_channels=1, n_classes=1)\n",
     "# model = baseline.Baseline()\n",
-    "model.load_state_dict(torch.load('./unet_11.pt', map_location=torch.device('cpu')))\n",
+    "model.load_state_dict(torch.load('./unet_12.pt', map_location=torch.device('cpu')))\n",
     "test_df = data_pipeline.build_test_dataframe(use_processed_images=False)\n",
     "train_df = data_pipeline.build_dataframe(use_processed_images=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test, X_names, X_train = data_pipeline.build_test_dataloaders(test_df, train_df, apply_scaling=True)"
    ]
   },
   {
@@ -48,28 +65,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test, X_names, X_train = data_pipeline.build_test_dataloaders(test_df, train_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "test_dl = DataLoader(TensorDataset(X_test), batch_size=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2538it [00:31, 80.52it/s]\n"
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2538it [00:33, 76.31it/s]\n"
      ]
     }
    ],
@@ -85,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,11 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds_df.to_csv('KIRBY_predictions_7.csv')"
+    "preds_df.to_csv('KIRBY_predictions_8.csv')"
    ]
   },
   {
@@ -316,7 +331,9 @@
     "When looking at the output we are just predicting 0.0 for everything, and that is how we wind up with an unchanged score\n",
     "\n",
     "- Unet 11 - 0.59 train IoU - Two Down Convs + No Scaling + Random Augments + No Train Test Split\n",
-    "  - predicts 481 total 1.0... probably not it either"
+    "  - predicts 481 total 1.0... probably not it either\n",
+    "- Unet 12 - 0.58 train IoU - Two Down Convs + Robust Scaler on full Train Set + Random Augments + No Train Test Split\n",
+    "  - predicts 3091 1.0 values, maybe this is the next one to test?"
    ]
   }
  ],
