--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -3510,6 +3510,29 @@
    "source": [
     "dataframe[dataframe['well_number'] == 13]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100\n",
+       "0    9038\n",
+       "1     632\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe[dataframe['well_number'] == 5]"
+   ]
   }
  ],
  "metadata": {
